test/fail/mod_empty_stack.avm
; mod on an empty stack
mod
exit